fix: datasource menu value overflow

--- a/src/components/DataSourcesMenu/index.module.less
+++ b/src/components/DataSourcesMenu/index.module.less
@@ -4,6 +4,15 @@
   width: 100%;
   max-width: 420px;
   padding: 0 10px 10px;
+  overflow: hidden;
   font-weight: 600;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.value {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
